# Compression

./: CMakeLists.txt  readme.txt
examples/: main.cpp
include/: unzipper.h  zip_constants.h  zipper.h  zlib_utils.h
include/compression/core/7z/: constants.h  szcompressor.h  szdecompressor.h
include/compression/core/zip/: constants.h  unzipper.h  zip_constants.h  zipper.h
include/compression/utils/: lzma_utils.h  zlib_utils.h
src/: unzipper.cpp  zipper.cpp  zlib_utils.cpp
src/core/7z/: szcompressor.cpp  szdecompressor.cpp
src/core/zip/: unzipper.cpp  zipper.cpp
src/utils/: lzma_utils.cpp  zlib_utils.cpp
